workshop04/mysql.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: mysql

---
apiVersion: v1
kind: Service
metadata:
  name: db-hsvc
  namespace: mysql
  labels:
    app: db
    name: db-hsvc
spec:
  clusterIP: None
  selector:
    app: db
    name: mysql-po
  ports:
  - port: 3306
    targetPort: 3306


---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db-sts
  namespace: mysql
  labels:
    app: db
    name: db-sts
spec:
  replicas: 2
  serviceName: db-hsvc
  selector:
    matchLabels:
      app: db
      name: mysql-po

  volumeClaimtemplate:
  - metadata:
      name: data-vol
    spec:
      accessModes:
      - "ReadWriteOnce"
      storageClassName: do-block-storage
      resources:
        requests:
          storage: 1Gi
  templates:
    metadata:
      name: mysql-po
      labels:
        app: db
        name: mysql-po
    spec:
      containers:
      - name: mysql-container
        image: mysql:8.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: data-vol
          mountPath: /var/lib/mysql
