workshop04/netpol.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: mysql
  labels:
    app: mysql
    name: deny-all
spec:
  policyTypes:
  - Ingress
  - Egress
  podSelector:
    matchLabels:
      app: db
      name: mysql-po

---
kind: NetworkPolicy
metadata:
  name: allow-netshoot
  namespace: mysql
spec:
  policyTypes:
  - Ingress
  podSelector:
    matchLabels:
      app: db
      name: mysql-po
  ingress:
  - from:
    - podSelector:
        matchLabels:
          run: msysql-netshoot
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: default
    ports:
    - port: 3306
